Fixed overlap CSS with header 1 & 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ nav {
 }
 
     /* Header 2 */
-#navbar p {
+#brand-text-2 p {
     color: var(--main-white);
     font-family: Arial, sans-serif;
     font-weight: bold;
